# Trafic-Monitoring

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh  main.py  run.sh  setup.sh
docs/: CPP_PROJECT_STUDY_GUIDE.md
docs/study/: 00_INDEX.md  01_READ_CPP_PROJECT.md  02_CMAKE_AND_BUILD.md  03_PIPELINE_OVERVIEW.md  04_CPP_CORE_CONCEPTS.md  05_DEBUG_ROADMAP_EXERCISES.md  CHECKLIST_CPP_FILE_10_MIN.md  FILE_TO_FILE_CALL_GRAPH.md  PIPELINE_MERMAID.md
include/: app_config.h  brand_classifier.h  frame_annotator.h  yolo_detector.h
include/ocrplate/app/: cli_args.h
include/ocrplate/core/: app_config.h  detection.h
include/ocrplate/pipeline/: frame_annotator.h  track_trace.h
include/ocrplate/services/: brand_classifier.h  ocr_batch.h  onnx_runner.h  post_process_out_string.h  yolo_detector.h  yolo_detector_internal.h
include/ocrplate/tracking/: byte_track_tracker.h  vehicle_identity_store.h
include/ocrplate/utils/: image_preprocess.h  ocr_report.h  onnx_decode_utils.h  parallel_utils.h  plate_parallel.h  rect_utils.h
include/utils/: cli_args.h  parallel_utils.h  plate_parallel.h  vehicle_tracker.h
model/: model.onnx  model_ocr.onnx  model_ocr_plate.onnx  plate_int8.onnx  vehicle_int8.onnx
src/: benchmark.cpp  brand_classifier.cpp  frame_annotator.cpp  main.cpp  ocr_batch.cpp  yolo_detector.cpp  yolo_nms.cpp  yolo_postprocess.cpp  yolo_preprocess.cpp
src/app/: benchmark.cpp  cli_args.cpp  main.cpp
src/pipeline/: frame_annotator.cpp  track_trace.cpp
src/services/: brand_classifier.cpp  ocr_batch.cpp  onnx_runner.cpp  post_process_out_string.cpp  yolo_detector.cpp  yolo_nms.cpp  yolo_postprocess.cpp  yolo_preprocess.cpp
src/tracking/: byte_track_tracker.cpp  vehicle_identity_store.cpp
src/utils/: cli_args.cpp  image_preprocess.cpp  ocr_report.cpp  onnx_decode_utils.cpp  parallel_utils.cpp  plate_parallel.cpp  rect_utils.cpp  vehicle_tracker.cpp
